Created Common Error Handling

--- a/src/main/resources/error_en_US.properties
+++ b/src/main/resources/error_en_US.properties
@@ -1,3 +1,3 @@
 error.no.priduct.id=No Product Found - 
-error.no.mediaerror.id=INVALID MEDIA TYPE
-error.no.genericerror.id=Unkown Error
+error.mediaerror.id=INVALID MEDIA TYPE
+error.genericerror.id=Unkown Error
