Product Configurations GET Service Related Changes

--- a/src/main/resources/error_en_US.properties
+++ b/src/main/resources/error_en_US.properties
@@ -1,3 +1,4 @@
 error.no.priduct.id=No Product Found - 
 error.mediaerror.id=INVALID MEDIA TYPE
 error.genericerror.id=Unkown Error
+error.existing.priduct.id=Existing Product, Duplicate External Id is not allowed
