Get Service Exception Handling

--- a/src/main/resources/error_en_US.properties
+++ b/src/main/resources/error_en_US.properties
@@ -3,3 +3,4 @@ error.mediaerror.id=INVALID MEDIA TYPE
 error.genericerror.id=Unkown Error
 error.existing.priduct.id=Existing Product, Duplicate External Id is not allowed
 error.notvalid.response.id=Invalid Response, Request Got Processed for the Product
+error.unhandled.exception.id=Unhandled Exception
