Fixed Isses: VELOEXTAPI-319, VELOEXTAPI-317, VELOEXTAPI-295

--- a/src/main/resources/error_en_US.properties
+++ b/src/main/resources/error_en_US.properties
@@ -1,6 +1,7 @@
 error.no.priduct.id=No Product Found - 
 error.mediaerror.id=INVALID MEDIA TYPE
 error.genericerror.id=Unkown Error
+error.authentication.id=Invalid/Expired Token, Authentication token is expired or invalid. Please re-generate the token from Login server.
 error.existing.priduct.id=Existing Product, Duplicate External Id is not allowed
 error.notvalid.response.id=Invalid Response, Request Got Processed for the Product
 error.unhandled.exception.id=Unhandled Exception
